--- a/.env
+++ b/.env
@@ -13,6 +13,6 @@ INIT_PASSWORD=123456
 
 #config mail
 EMAIL_HOST=smtp.gmail.com
-EMAIL_AUTH_USER=quangluan1702@gmail.com
-EMAIL_AUTH_PASS=pzzhtfygwpkuifoo
+EMAIL_AUTH_USER=
+EMAIL_AUTH_PASS=
 EMAIL_PREVIEW=false
